# JIRA-feedback-knowledge-updater

./: .cursorignore  .env.example  .gitignore  README.md  classifier_bots_config.json.example  main.py  pyproject.toml  requirements.txt  summarizer_bots_config.json.example
bots/: __init__.py  alpha_knowledge.py  alpha_summarizer.py
config/: __init__.py  bot_config.py  settings.py
core/: __init__.py  updater.py
database/: __init__.py  db_manager.py
jira_integration/: __init__.py  client.py
ui/: __init__.py  interactive.py
